--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div class="background-music-container">
-        <audio id="background-music" src="music/intro music.mp3" autoplay>
+        <audio id="background-music" src="music/intro music.mp3" loop autoplay>
         </audio>
         <div class="music-mute-button"><i class="fas fa-volume-up"></i></div>
     </div>
