added intro section

--- a/StartPage.html
+++ b/StartPage.html
@@ -9,8 +9,9 @@
 
 
     <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
     <!-- My stylesheet -->
     <link rel="stylesheet" href="styles/1. Login Intro/styles.css">
     <link rel="stylesheet" href="styles/2. Background Music/style.css">
@@ -19,21 +20,13 @@
 
 <body>
 
-    <section id="background-music-section">
-        <div class="background-music-container">
-            <audio id="background-music" src="music/intro music.mp3" loop autoplay>
-            </audio>
-            <div class="music-mute-button"><i class="fas fa-volume-up"></i></div>
-        </div>
-    </section>
+    <div class="background-music-container">
+        <!-- <audio id="background-music" src="music/intro music.mp3" loop autoplay>
+        </audio> -->
+        <div class="music-mute-button"><i class="fas fa-volume-up"></i></div>
+    </div>
 
-    <section id="login-intro-section" class="">
-        <div class="login-background">
-            <h1 class="zoomOut">Yash Bansal</h1>
-        </div>
-    </section>
-
-    <section id="intro-section" class="invisible">
+    <section id="intro-section">
         <div class="background-image">
             <img class="original" src="images/1. Intro Page/background Photo1.jpeg" alt="Background Photo">
         </div>
@@ -85,8 +78,6 @@
 
     </section>
 
-
-    <script src="script/1. Login Intro/script.js"></script>
     <script src="script/2. Audio script/script.js"></script>
 </body>
 
