--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/1. Login Intro/styles.css">
     <link rel="stylesheet" href="styles/2. Background Music/style.css">
     <link rel="stylesheet" href="styles/3. Intro Section/style.css">
+    <link rel="stylesheet" href="styles/5. About Page/styles.css">
 </head>
 
 <body>
@@ -45,19 +46,19 @@
                 </div>
                 <div class="navbar-right">
                     <div class="navbar-list active">
-                        <a href="">Home</a>
+                        <a class="navbar-home" href="">Home</a>
                         <hr>
                     </div>
                     <div class="navbar-list">
-                        <a href="">About</a>
+                        <a class="navbar-about" href="">About</a>
                         <hr>
                     </div>
                     <div class="navbar-list">
-                        <a href="">My Hobbies</a>
+                        <a class="navbar-hobbies" href="">My Hobbies</a>
                         <hr>
                     </div>
                     <div class="navbar-list">
-                        <a href="">Skills</a>
+                        <a class="navbar-skills" href="">Skills</a>
                         <hr>
                     </div>
                 </div>
@@ -85,9 +86,74 @@
 
     </section>
 
+    <section id="about-me-section" class="invisible">
+        <div class="about-info-div">
+            <div class="navbar">
+                <div class="navbar-left">
+                    <a href="">Yash Bansal</a>
+                </div>
+                <div class="navbar-right">
+                    <div class="navbar-list">
+                        <a class="navbar-home" href="">Home</a>
+                        <hr>
+                    </div>
+                    <div class="navbar-list active">
+                        <a class="navbar-about" href="">About</a>
+                        <hr>
+                    </div>
+                    <div class="navbar-list">
+                        <a class="navbar-hobbies" href="">My Hobbies</a>
+                        <hr>
+                    </div>
+                    <div class="navbar-list">
+                        <a class="navbar-skills" href="">Skills</a>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="about-info-container">
+                <div class="about-me-h1 animate">
+                    <h1>About Me</h1>
+                </div>
+                <div class="about-A-background animate">
+                    <span>A</span>
+                </div>
+                <div class="scroll-click">
+                    <i class='fa fa-angle-double-down' id='scroll-icon'></i>
+                </div>
+            </div>
+            <div class="about-details-div invisible">
+                <div class="my-photo-div">
+                    <img src="images/2. About Page/man.png" alt="">
+                </div>
+                <div class="my-information-div">
+                    <div class="info-top-heading-div">
+                        <h1>My name is Yash Bansal</h1>
+                    </div>
+                    <div class="info-middle-heading-div ">
+                        <span>I'm</span>
+                        <span>a</span>
+                        <span>Frontend</span>
+                        <span>Developer</span>
+                        <br>
+                        <span>and</span>
+                        <span>a</span>
+                        <span>Coder</span>
+                    </div>
+                    <div class="info-lower-heading-div ">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi non </p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi non </p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi non </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="script/1. Login Intro/script.js"></script>
     <script src="script/2. Audio script/script.js"></script>
+    <script src="script/5. About Page/script.js"></script>
+    <script src="script/6. Navbar Script/script.js"></script>
 </body>
 
 </html>
