--- a/skills.html
+++ b/skills.html
@@ -5,153 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-
+    <title>About Page</title>
 
     <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
     <!-- My stylesheet -->
     <link rel="stylesheet" href="styles/1. Login Intro/styles.css">
     <link rel="stylesheet" href="styles/2. Background Music/style.css">
     <link rel="stylesheet" href="styles/3. Intro Section/style.css">
-    <link rel="stylesheet" href="styles/5. About Page/styles.css">
     <link rel="stylesheet" href="styles/6. Skills Page/styles.css">
 </head>
 
 <body>
-
     <section id="background-music-section">
         <div class="background-music-container">
-            <audio id="background-music" src="music/intro music.mp3" loop autoplay>
-            </audio>
+            <!-- <audio id="background-music" src="music/intro music.mp3" loop autoplay>
+            </audio> -->
             <div class="music-mute-button"><i class="fas fa-volume-up"></i></div>
         </div>
     </section>
 
-    <section id="login-intro-section" class="">
-        <div class="login-background">
-            <h1 class="zoomOut">Yash Bansal</h1>
-        </div>
-    </section>
 
-    <section id="intro-section" class="invisible">
-        <div class="background-image">
-            <img class="original" src="images/1. Intro Page/background Photo1.jpeg" alt="Background Photo">
-        </div>
-
-        <div class="container">
-            <div class="navbar">
-                <div class="navbar-left">
-                    <a href="">Yash Bansal</a>
-                </div>
-                <div class="navbar-right">
-                    <div class="navbar-list active">
-                        <a class="navbar-home" href="">Home</a>
-                        <hr>
-                    </div>
-                    <div class="navbar-list">
-                        <a class="navbar-about" href="">About</a>
-                        <hr>
-                    </div>
-                    <div class="navbar-list">
-                        <a class="navbar-hobbies" href="">My Hobbies</a>
-                        <hr>
-                    </div>
-                    <div class="navbar-list">
-                        <a class="navbar-skills" href="">Skills</a>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-
-            <div class="overlay"></div>
-
-            <div class="info-container">
-                <div class="Hello-div"><h1>hello</h1></div>
-                <div class="my-info-div">
-                    <span>I</span>
-                    <span>Am</span>
-                    <span>Yash</span>
-                    <span>Bansal</span>
-                </div>
-                <div class="quality-div"><p>Frontend Developer</p></div>
-                <div class="extra-div">
-                    <span><hr></span>
-                    <span><hr></span>
-                    <span><hr></span>
-                    <span><hr></span>
-                </div>
-            </div>
-        </div>
-
-    </section>
-
-    <section id="about-me-section" class="invisible">
-        <div class="about-info-div">
-            <div class="navbar">
-                <div class="navbar-left">
-                    <a href="">Yash Bansal</a>
-                </div>
-                <div class="navbar-right">
-                    <div class="navbar-list">
-                        <a class="navbar-home" href="">Home</a>
-                        <hr>
-                    </div>
-                    <div class="navbar-list active">
-                        <a class="navbar-about" href="">About</a>
-                        <hr>
-                    </div>
-                    <div class="navbar-list">
-                        <a class="navbar-hobbies" href="">My Hobbies</a>
-                        <hr>
-                    </div>
-                    <div class="navbar-list">
-                        <a class="navbar-skills" href="">Skills</a>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-            <div class="about-info-container">
-                <div class="about-me-h1 animate">
-                    <h1>About Me</h1>
-                </div>
-                <div class="about-A-background animate">
-                    <span>A</span>
-                </div>
-                <div class="scroll-click">
-                    <i class='fa fa-angle-double-down' id='scroll-icon'></i>
-                </div>
-            </div>
-            <div class="about-details-div invisible">
-                <div class="my-photo-div">
-                    <img src="images/2. About Page/man.png" alt="">
-                </div>
-                <div class="my-information-div">
-                    <div class="info-top-heading-div">
-                        <h1>My name is Yash Bansal</h1>
-                    </div>
-                    <div class="info-middle-heading-div ">
-                        <span>I'm</span>
-                        <span>a</span>
-                        <span>Frontend</span>
-                        <span>Developer</span>
-                        <br>
-                        <span>and</span>
-                        <span>a</span>
-                        <span>Coder</span>
-                    </div>
-                    <div class="info-lower-heading-div ">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi non </p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi non </p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi non </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="skills-section" class="invisible">
+    <section id="skills-section">
         <div class="skills-info-div">
             <div class="navbar">
                 <div class="navbar-left">
@@ -159,19 +36,19 @@
                 </div>
                 <div class="navbar-right">
                     <div class="navbar-list">
-                        <a class="navbar-home" href="">Home</a>
+                        <a href="">Home</a>
                         <hr>
                     </div>
                     <div class="navbar-list">
-                        <a class="navbar-about" href="">About</a>
+                        <a href="">About</a>
                         <hr>
                     </div>
                     <div class="navbar-list">
-                        <a class="navbar-hobbies" href="">My Hobbies</a>
+                        <a href="">My Hobbies</a>
                         <hr>
                     </div>
                     <div class="navbar-list active">
-                        <a class="navbar-skills" href="">Skills</a>
+                        <a href="">Skills</a>
                         <hr>
                     </div>
                 </div>
@@ -254,7 +131,7 @@
                                         <div class="mask half">
                                             <div class="fill"></div>
                                         </div>
-                                        <div class="inside-circle">85%</div>
+                                        <div class="inside-circle"> 85% </div>
                                     </div>
                                 </div>
                                 <div class="personal-skill-bar-topic"><p>TeamWork</p>
@@ -269,7 +146,7 @@
                                         <div class="mask half">
                                             <div class="fill"></div>
                                         </div>
-                                        <div class="inside-circle">90%</div>
+                                        <div class="inside-circle"> 90% </div>
                                     </div>
                                 </div>
                                 <div class="personal-skill-bar-topic"><p>Flexibility</p>
@@ -284,7 +161,7 @@
                                         <div class="mask half">
                                             <div class="fill"></div>
                                         </div>
-                                        <div class="inside-circle">70%</div>
+                                        <div class="inside-circle"> 70% </div>
                                     </div>
                                 </div>
                                 <div class="personal-skill-bar-topic"><p>Communication</p>
@@ -297,11 +174,9 @@
         </div>
     </section>
 
-    <script src="script/1. Login Intro/script.js"></script>
+
     <script src="script/2. Audio script/script.js"></script>
-    <script src="script/5. About Page/script.js"></script>
     <script src="script/7. Skills Page/script.js"></script>
-    <script src="script/6. Navbar Script/script.js"></script>
 </body>
 
 </html>
