renamed skill to skills

--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
             </div>
             <div class="skills-details-div invisible">
                 <div class="skills-top-heading-div">
-                    <h1>My Skill</h1>
+                    <h1>My Skills</h1>
                 </div>
                 <div class="skills-chart-div">
                     <div class="software-skill">
                         <div class="software-skill-heading-div">
-                            <h3>Software Skill</h3>
+                            <h3>Software Skills</h3>
                         </div>
                         <div class="software-skill-chart-div">
                             <div class="software-skill-number software-skill-number-1">
@@ -242,7 +242,7 @@
                     </div>
                     <div class="personal-skill">
                         <div class="personal-skill-heading-div">
-                            <h3>Personal Skill</h3>
+                            <h3>Personal Skills</h3>
                         </div>
                         <div class="personal-skill-chart-div">
                             <div class="personal-skill-number personal-skill-number-1">
