added hobbies section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/3. Intro Section/style.css">
     <link rel="stylesheet" href="styles/5. About Page/styles.css">
     <link rel="stylesheet" href="styles/6. Skills Page/styles.css">
+    <link rel="stylesheet" href="styles/7. Hobbies Page/styles.css">
 </head>
 
 <body>
@@ -297,10 +298,86 @@
         </div>
     </section>
 
+    <section id="hobbies-section" class="invisible">
+        <div class="hobbies-info-div">
+            <div class="navbar">
+                <div class="navbar-left">
+                    <a href="">Yash Bansal</a>
+                </div>
+                <div class="navbar-right">
+                    <div class="navbar-list">
+                        <a class="navbar-home" href="">Home</a>
+                        <hr>
+                    </div>
+                    <div class="navbar-list">
+                        <a class="navbar-about" href="">About</a>
+                        <hr>
+                    </div>
+                    <div class="navbar-list active">
+                        <a class="navbar-hobbies" href="">My Hobbies</a>
+                        <hr>
+                    </div>
+                    <div class="navbar-list">
+                        <a class="navbar-skills" href="">Skills</a>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="hobbies-info-container">
+                <div class="hobbies-dust-background">
+                    <video src="video/1. Skills Page/dust transition.mp4" autoplay loop></video>
+                </div>
+                <div class="my-hobbies-h1">
+                    <h1>My Hobbies</h1>
+                </div>
+                <div class="scroll-click">
+                    <i class='fa fa-angle-double-down' id='scroll-icon'></i>
+                </div>
+            </div>
+            <div class="hobbies-details-div invisible">
+                <div class="hobbies-background-div">
+                    <img src="images/3. Hobbies Page/background.png" alt="">
+                    <div class="image-overlay">
+                        <div class="hobbies-top-heading-div">
+                            <h1>My Hobbies</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="hobbies-list-div">
+                    <div class="hobbies-list">
+                        <div class="hobbies-image">
+                            <img src="images/3. Hobbies Page/hobbies card/coding.jpeg" alt="coding hobby photo">
+                        </div>
+                        <div class="hobbies-line">
+                            <p>Coding</p>
+                        </div>
+                    </div>
+                    <div class="hobbies-list">
+                        <div class="hobbies-image">
+                            <img src="images/3. Hobbies Page/hobbies card/listening music.jpeg" alt="listening music photo">
+                        </div>
+                        <div class="hobbies-line">
+                            <p>Listening Music</p>
+                        </div>
+                    </div>
+                    <div class="hobbies-list">
+                        <div class="hobbies-image">
+                            <img src="images/3. Hobbies Page/hobbies card/video game.png" alt="Video Game photo">
+                        </div>
+                        <div class="hobbies-line">
+                            <p>Video Game</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script/1. Login Intro/script.js"></script>
     <script src="script/2. Audio script/script.js"></script>
     <script src="script/5. About Page/script.js"></script>
     <script src="script/7. Skills Page/script.js"></script>
+    <script src="script/8. Hobbies Page/script.js"></script>
     <script src="script/6. Navbar Script/script.js"></script>
 </body>
 
