--- a/index.html
+++ b/index.html
@@ -143,8 +143,26 @@
                         <a class="navbar-skills" href="">Skills</a>
                         <hr>
                     </div>
+                    <div class="navbar-burger-div">
+                        <div class="navbar-burger">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="mobile-dropdown-div">
+                <div class="mobile-dropdown">
+                    <div class="mobile-dropdown-list"><a class="navbar-home" href="">Home</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-about" href="">About</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-hobbies" href="">My Hobbies</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-skills" href="">Skills</a></div>
+                </div>
+            </div>
+
+
             <div class="about-info-container">
                 <div class="about-me-h1 animate">
                     <h1>About Me</h1>
@@ -210,8 +228,26 @@
                         <a class="navbar-skills" href="">Skills</a>
                         <hr>
                     </div>
+                    <div class="navbar-burger-div">
+                        <div class="navbar-burger">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="mobile-dropdown-div">
+                <div class="mobile-dropdown">
+                    <div class="mobile-dropdown-list"><a class="navbar-home" href="">Home</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-about" href="">About</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-hobbies" href="">My Hobbies</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-skills" href="">Skills</a></div>
+                </div>
+            </div>
+
+
             <div class="skills-info-container">
                 <div class="skills-dust-background">
                     <video src="video/1. Skills Page/dust transition.mp4" autoplay loop></video>
@@ -359,8 +395,26 @@
                         <a class="navbar-skills" href="">Skills</a>
                         <hr>
                     </div>
+                    <div class="navbar-burger-div">
+                        <div class="navbar-burger">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="mobile-dropdown-div">
+                <div class="mobile-dropdown">
+                    <div class="mobile-dropdown-list"><a class="navbar-home" href="">Home</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-about" href="">About</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-hobbies" href="">My Hobbies</a></div>
+                    <div class="mobile-dropdown-list"><a class="navbar-skills" href="">Skills</a></div>
+                </div>
+            </div>
+
+
             <div class="hobbies-info-container">
                 <div class="hobbies-dust-background">
                     <video src="video/1. Skills Page/dust transition.mp4" autoplay loop></video>
