fixed about page A

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <h1>About Me</h1>
                 </div>
                 <div class="about-A-background animate">
-                    <span>A</span>
+                    <img src="images/2. About Page/A.png" alt="">
                 </div>
                 <div class="scroll-click">
                     <i class='fa fa-angle-double-down' id='scroll-icon'></i>
