made about page responsive

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="styles/5. About Page/styles.css">
     <link rel="stylesheet" href="styles/6. Skills Page/styles.css">
     <link rel="stylesheet" href="styles/7. Hobbies Page/styles.css">
-    <link rel="stylesheet" href="styles/8. Navabar/styles.css">
+    <link rel="stylesheet" href="styles/8. Navbar/styles.css">
 </head>
 
 <body>
@@ -122,6 +122,7 @@
 
     <section id="about-me-section" class="invisible">
         <div class="about-info-div">
+
             <div class="navbar">
                 <div class="navbar-left">
                     <a href="">Yash Bansal</a>
@@ -174,6 +175,7 @@
                     <i class='fa fa-angle-double-down' id='scroll-icon'></i>
                 </div>
             </div>
+
             <div class="about-details-div invisible">
                 <div class="my-photo-div">
                     <img src="images/2. About Page/man.png" alt="">
@@ -187,18 +189,12 @@
                         <span>a</span>
                         <span>Frontend</span>
                         <span>Developer</span>
-                        <br>
                         <span>and</span>
                         <span>a</span>
                         <span>Coder</span>
                     </div>
                     <div class="info-lower-heading-div ">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi
-                            non </p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi
-                            non </p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta sapiente delectus excepturi
-                            non </p>
+                        <p>I'm very passionate and dedicated to my work with 5 years experience as a graphics designer. I love minimalism, grayscale and ideas that challenge me to make beautiful design</p>
                     </div>
                 </div>
             </div>
