responsive nature of hobbies page

--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
                     <i class='fa fa-angle-double-down' id='scroll-icon'></i>
                 </div>
             </div>
+
             <div class="hobbies-details-div invisible">
                 <div class="hobbies-background-div">
                     <img src="images/3. Hobbies Page/background.png" alt="">
@@ -432,7 +433,7 @@
                     </div>
                 </div>
                 <div class="hobbies-list-div">
-                    <div class="hobbies-list">
+                    <div class="hobbies-list hobbies-list1">
                         <div class="hobbies-image">
                             <img src="images/3. Hobbies Page/hobbies card/coding.jpeg" alt="coding hobby photo">
                         </div>
@@ -440,7 +441,7 @@
                             <p>Coding</p>
                         </div>
                     </div>
-                    <div class="hobbies-list">
+                    <div class="hobbies-list hobbies-list2">
                         <div class="hobbies-image">
                             <img src="images/3. Hobbies Page/hobbies card/listening music.jpeg"
                                 alt="listening music photo">
@@ -449,7 +450,7 @@
                             <p>Listening Music</p>
                         </div>
                     </div>
-                    <div class="hobbies-list">
+                    <div class="hobbies-list hobbies-list3">
                         <div class="hobbies-image">
                             <img src="images/3. Hobbies Page/hobbies card/video game.png" alt="Video Game photo">
                         </div>
