--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
             <div class="hobbies-info-container">
                 <div class="hobbies-dust-background">
-                    <video src="video/1. Skills Page/dust transition.mp4" autoplay loop></video>
+                    <video src="video/1. Skills Page/dust transition.mp4" autoplay muted loop></video>
                 </div>
                 <div class="my-hobbies-h1">
                     <h1>My Hobbies</h1>
