--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
             <div class="skills-info-container">
                 <div class="skills-dust-background">
-                    <video src="video/1. Skills Page/dust transition.mp4" autoplay loop></video>
+                    <video src="video/1. Skills Page/dust transition.mp4" autoplay muted loop></video>
                 </div>
                 <div class="my-skill-h1">
                     <h1>My Skills</h1>
