--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         rel="stylesheet">
 
     <!-- My stylesheet -->
+    <link rel="stylesheet" href="styles/0. PreLoader/style.css">
     <link rel="stylesheet" href="styles/1. Login Intro/styles.css">
     <link rel="stylesheet" href="styles/2. Background Music/style.css">
     <link rel="stylesheet" href="styles/3. Intro Section/style.css">
@@ -29,6 +30,10 @@
 </head>
 
 <body>
+
+    <section id="preLoader" class="is-active">
+        <svg><rect></rect></svg>
+    </section>
 
     <section id="background-music-section">
         <div class="background-music-container">
@@ -461,6 +466,7 @@
         </div>
     </section>
 
+    <script src="script/0. PreLoader Script/script.js"></script>
     <script src="script/1. Login Intro/script.js"></script>
     <script src="script/2. Audio script/script.js"></script>
     <script src="script/5. About Page/script.js"></script>
