fixed audio start

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
     <section id="background-music-section">
         <div class="background-music-container">
-            <audio id="background-music" src="music/intro music.mp3" loop autoplay>
+            <audio id="background-music" src="music/intro music.mp3" loop>
             </audio>
             <div class="music-mute-button"><i class="fas fa-volume-up"></i></div>
         </div>
     </section>
 
-    <section id="login-intro-section" class="">
+    <section id="login-intro-section" class="invisible">
         <div class="login-background">
             <h1 class="zoomOut">Yash Bansal</h1>
         </div>
