changed my about me text

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <span>Coder</span>
                     </div>
                     <div class="info-lower-heading-div ">
-                        <p>I'm very passionate and dedicated to my work with 5 years experience as a graphics designer. I love minimalism, grayscale and ideas that challenge me to make beautiful design</p>
+                        <p>I'm very passionate and dedicated to my work and loves to make web design and loves to code. I am interested in C++ and python programming and currently pursuing BTech in CSAI.</p>
                     </div>
                 </div>
             </div>
